# function-extended

./: .gitignore  ChangeLog.md  README.md  function-extended.cabal
src/Data/Function/: Extended.hs
